Wire real data through orchestrator tasks
Replace mocked ZIO.sleep tasks with real data pipeline:
- Generate 500 PersonEvent records via preprocessing module
- Write Parquet to partitioned data lake (dt=YYYY-MM-DD/)
- Read back and validate records using parquet4s
- Compute batch analytics (city stats, age groups, status)
- Track run history with timestamps and cumulative totals

Also: simplify docker-compose, re-enable dashboard sample data
sections, update media.md with accurate orchestrator details.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>